--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
+    "scripts": {
+        "post-install-cmd": "cp config/config.dist.php config/config.php",
+        "start": "php -S localhost:8080 public/router.php"
+    },
     "require": {
+        "php": ">=5.4",
         "cheddar-getter/client": "*",
         "stripe/stripe-php": "*"
     }
